--- a/documentation/indices/files.html
+++ b/documentation/indices/files.html
@@ -412,8 +412,8 @@
                     <li><a href="../files/src-media-photo-instagramphoto.html"><abbr title="src/Media/Photo/InstagramPhoto.php">InstagramPhoto.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramthumbnail.html"><abbr title="src/Media/Video/InstagramThumbnail.php">InstagramThumbnail.php</abbr></a></li>
                     <li><a href="../files/src-media-video-instagramvideo.html"><abbr title="src/Media/Video/InstagramVideo.php">InstagramVideo.php</abbr></a></li>
-                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-request-internal.html"><abbr title="src/Request/Internal.php">Internal.php</abbr></a></li>
+                    <li><a href="../files/src-request-metadata-internal.html"><abbr title="src/Request/Metadata/Internal.php">Internal.php</abbr></a></li>
                     <li><a href="../files/src-exception-internalexception.html"><abbr title="src/Exception/InternalException.php">InternalException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidargumentexception.html"><abbr title="src/Exception/InvalidArgumentException.php">InvalidArgumentException.php</abbr></a></li>
                     <li><a href="../files/src-exception-invalidsmscodeexception.html"><abbr title="src/Exception/InvalidSmsCodeException.php">InvalidSmsCodeException.php</abbr></a></li>
@@ -456,9 +456,10 @@
                     <li><a href="../files/src-response-locationstoryresponse.html"><abbr title="src/Response/LocationStoryResponse.php">LocationStoryResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-loggedinaccount.html"><abbr title="src/Response/Model/LoggedInAccount.php">LoggedInAccount.php</abbr></a></li>
                     <li><a href="../files/src-response-loginactivityresponse.html"><abbr title="src/Response/LoginActivityResponse.php">LoginActivityResponse.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-loginbutton.html"><abbr title="src/Response/Model/LoginButton.php">LoginButton.php</abbr></a></li>
                     <li><a href="../files/src-exception-loginrequiredexception.html"><abbr title="src/Exception/LoginRequiredException.php">LoginRequiredException.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-loginresponse.html"><abbr title="src/Response/Model/LoginResponse.php">LoginResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-loginresponse.html"><abbr title="src/Response/LoginResponse.php">LoginResponse.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-loginresponse.html"><abbr title="src/Response/Model/LoginResponse.php">LoginResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-logoutresponse.html"><abbr title="src/Response/LogoutResponse.php">LogoutResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-lookupphoneresponse.html"><abbr title="src/Response/LookupPhoneResponse.php">LookupPhoneResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-loomfetchconfigresponse.html"><abbr title="src/Response/LoomFetchConfigResponse.php">LoomFetchConfigResponse.php</abbr></a></li>
@@ -596,8 +597,8 @@
                     <li><a href="../files/src-response-recoveryresponse.html"><abbr title="src/Response/RecoveryResponse.php">RecoveryResponse.php</abbr></a></li>
                     <li><a href="../files/src-media-geometry-rectangle.html"><abbr title="src/Media/Geometry/Rectangle.php">Rectangle.php</abbr></a></li>
                     <li><a href="../files/src-settings-storage-redis.html"><abbr title="src/Settings/Storage/Redis.php">Redis.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-request-reel.html"><abbr title="src/Request/Reel.php">Reel.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-reel.html"><abbr title="src/Response/Model/Reel.php">Reel.php</abbr></a></li>
                     <li><a href="../files/src-response-reelmediaviewerresponse.html"><abbr title="src/Response/ReelMediaViewerResponse.php">ReelMediaViewerResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-reelmention.html"><abbr title="src/Response/Model/ReelMention.php">ReelMention.php</abbr></a></li>
                     <li><a href="../files/src-response-reelsettingsresponse.html"><abbr title="src/Response/ReelSettingsResponse.php">ReelSettingsResponse.php</abbr></a></li>
@@ -668,8 +669,8 @@
                     <li><a href="../files/src-response-model-sharedfollower.html"><abbr title="src/Response/Model/SharedFollower.php">SharedFollower.php</abbr></a></li>
                     <li><a href="../files/src-response-model-sharedfolloweraccountsinfo.html"><abbr title="src/Response/Model/SharedFollowerAccountsInfo.php">SharedFollowerAccountsInfo.php</abbr></a></li>
                     <li><a href="../files/src-response-sharedfollowersresponse.html"><abbr title="src/Response/SharedFollowersResponse.php">SharedFollowersResponse.php</abbr></a></li>
-                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shopping.html"><abbr title="src/Response/Model/Shopping.php">Shopping.php</abbr></a></li>
+                    <li><a href="../files/src-request-shopping.html"><abbr title="src/Request/Shopping.php">Shopping.php</abbr></a></li>
                     <li><a href="../files/src-response-model-shoppingtype.html"><abbr title="src/Response/Model/ShoppingType.php">ShoppingType.php</abbr></a></li>
                     <li><a href="../files/src-response-shouldrequireprofessionalaccountresponse.html"><abbr title="src/Response/ShouldRequireProfessionalAccountResponse.php">ShouldRequireProfessionalAccountResponse.php</abbr></a></li>
                     <li><a href="../files/src-signatures.html"><abbr title="src/Signatures.php">Signatures.php</abbr></a></li>
@@ -752,8 +753,8 @@
                     <li><a href="../files/src-response-tagsstoryresponse.html"><abbr title="src/Response/TagsStoryResponse.php">TagsStoryResponse.php</abbr></a></li>
                     <li><a href="../files/src-response-model-tallies.html"><abbr title="src/Response/Model/Tallies.php">Tallies.php</abbr></a></li>
                     <li><a href="../files/src-response-model-template.html"><abbr title="src/Response/Model/Template.php">Template.php</abbr></a></li>
-                    <li><a href="../files/src-response-model-bloks-text.html"><abbr title="src/Response/Model/Bloks/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-text.html"><abbr title="src/Response/Model/Text.php">Text.php</abbr></a></li>
+                    <li><a href="../files/src-response-model-bloks-text.html"><abbr title="src/Response/Model/Bloks/Text.php">Text.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-textthemedcolor.html"><abbr title="src/Response/Model/Bloks/TextThemedColor.php">TextThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-bloks-themedcolor.html"><abbr title="src/Response/Model/Bloks/ThemedColor.php">ThemedColor.php</abbr></a></li>
                     <li><a href="../files/src-response-model-thread.html"><abbr title="src/Response/Model/Thread.php">Thread.php</abbr></a></li>
