--- a/documentation/namespaces/instagramapi-response-model.html
+++ b/documentation/namespaces/instagramapi-response-model.html
@@ -608,6 +608,8 @@
                 <dd>Automatically maps JSON data onto PHP objects with virtual functions.</dd>
                             <dt><a href="../classes/InstagramAPI-Response-Model-SegmentationModels.html"><abbr title="\InstagramAPI\Response\Model\SegmentationModels">SegmentationModels</abbr></a></dt>
                 <dd>SegmentationModels.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-LoginButton.html"><abbr title="\InstagramAPI\Response\Model\LoginButton">LoginButton</abbr></a></dt>
+                <dd>LoginButton.</dd>
             
                     </dl>
     
