--- a/documentation/packages/default.html
+++ b/documentation/packages/default.html
@@ -1502,6 +1502,8 @@ to-string and from-string methods in this class are consistent.</dd>
                 <dd>HasInteropUpgradedResponse.</dd>
                             <dt><a href="../classes/InstagramAPI-Exception-InvalidArgumentException.html"><abbr title="\InstagramAPI\Exception\InvalidArgumentException">InvalidArgumentException</abbr></a></dt>
                 <dd>Used when we know the argument provided is wrong.</dd>
+                            <dt><a href="../classes/InstagramAPI-Response-Model-LoginButton.html"><abbr title="\InstagramAPI\Response\Model\LoginButton">LoginButton</abbr></a></dt>
+                <dd>LoginButton.</dd>
             
                             <dt><a href="../classes/InstagramAPI-React-PersistentTrait.html"><abbr title="\InstagramAPI\React\PersistentTrait">PersistentTrait</abbr></a></dt>
                 <dd></dd>
