--- a/documentation/classes/InstagramAPI-Realtime.html
+++ b/documentation/classes/InstagramAPI-Realtime.html
@@ -85,7 +85,7 @@
         <aside class="phpdocumentor-element-found-in">
             <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
             :
-            <span class="phpdocumentor-element-found-in__line">39</span>
+            <span class="phpdocumentor-element-found-in__line">41</span>
         </aside>
 
         <p class="phpdocumentor-class__summary">The following events are emitted:
@@ -101,6 +101,8 @@
 <li>thread-notify - Someone has created ActionLog item in thread.</li>
 <li>thread-seen - Someone has updated their last seen position.</li>
 <li>thread-activity - Someone has created an activity (like start/stop typing) in thread.</li>
+<li>thread-item-liked - Someone has liked one message.</li>
+<li>thread-item-unliked - Someone has unliked one message.</li>
 <li>thread-item-created - New item has been created in thread.</li>
 <li>thread-item-updated - An existing item has been updated in thread.</li>
 <li>thread-item-removed - An existing item has been removed from thread.</li>
@@ -236,7 +238,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">44</span>
+        <span class="phpdocumentor-element-found-in__line">46</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">protected</span>
@@ -256,7 +258,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">47</span>
+        <span class="phpdocumentor-element-found-in__line">49</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">protected</span>
@@ -276,7 +278,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">50</span>
+        <span class="phpdocumentor-element-found-in__line">52</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">protected</span>
@@ -296,7 +298,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">53</span>
+        <span class="phpdocumentor-element-found-in__line">55</span>
     </aside>
         <code class="phpdocumentor-signature phpdocumentor-code ">
         <span class="phpdocumentor-signature__visibility">protected</span>
@@ -320,7 +322,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">64</span>
+        <span class="phpdocumentor-element-found-in__line">66</span>
     </aside>
         <p class="phpdocumentor-summary">Constructor.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -389,7 +391,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">104</span>
+        <span class="phpdocumentor-element-found-in__line">106</span>
     </aside>
         <p class="phpdocumentor-summary">Build a new MQTT client.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -418,7 +420,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">126</span>
+        <span class="phpdocumentor-element-found-in__line">128</span>
     </aside>
         <p class="phpdocumentor-summary">Starts underlying client.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -447,7 +449,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">134</span>
+        <span class="phpdocumentor-element-found-in__line">136</span>
     </aside>
         <p class="phpdocumentor-summary">Stops underlying client.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -476,7 +478,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">147</span>
+        <span class="phpdocumentor-element-found-in__line">149</span>
     </aside>
         <p class="phpdocumentor-summary">Marks thread item as seen.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -526,7 +528,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">170</span>
+        <span class="phpdocumentor-element-found-in__line">172</span>
     </aside>
         <p class="phpdocumentor-summary">Indicate activity in thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -577,7 +579,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">196</span>
+        <span class="phpdocumentor-element-found-in__line">198</span>
     </aside>
         <p class="phpdocumentor-summary">Sends text message to a given direct thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -638,7 +640,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">222</span>
+        <span class="phpdocumentor-element-found-in__line">224</span>
     </aside>
         <p class="phpdocumentor-summary">Sends like to a given direct thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -690,7 +692,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">249</span>
+        <span class="phpdocumentor-element-found-in__line">251</span>
     </aside>
         <p class="phpdocumentor-summary">Share an existing media post to a given direct thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -752,7 +754,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">277</span>
+        <span class="phpdocumentor-element-found-in__line">279</span>
     </aside>
         <p class="phpdocumentor-summary">Share an existing story to a given direct thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -814,7 +816,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">305</span>
+        <span class="phpdocumentor-element-found-in__line">307</span>
     </aside>
         <p class="phpdocumentor-summary">Share a profile to a given direct thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -876,7 +878,7 @@
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">336</span>
+        <span class="phpdocumentor-element-found-in__line">338</span>
     </aside>
         <p class="phpdocumentor-summary">Share a location to a given direct thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -940,7 +942,7 @@ functions such as Location::search().</p></section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">364</span>
+        <span class="phpdocumentor-element-found-in__line">366</span>
     </aside>
         <p class="phpdocumentor-summary">Share a hashtag to a given direct thread.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1002,7 +1004,7 @@ functions such as Location::search().</p></section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">392</span>
+        <span class="phpdocumentor-element-found-in__line">394</span>
     </aside>
         <p class="phpdocumentor-summary">Sends reaction to a given direct thread item.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1072,7 +1074,7 @@ functions such as Location::search().</p></section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">427</span>
+        <span class="phpdocumentor-element-found-in__line">429</span>
     </aside>
         <p class="phpdocumentor-summary">Removes reaction to a given direct thread item.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1142,7 +1144,7 @@ functions such as Location::search().</p></section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">457</span>
+        <span class="phpdocumentor-element-found-in__line">459</span>
     </aside>
         <p class="phpdocumentor-summary">Receive offline messages starting from the sequence ID.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
@@ -1192,7 +1194,7 @@ functions such as Location::search().</p></section>
     <aside class="phpdocumentor-element-found-in">
         <abbr class="phpdocumentor-element-found-in__file" title="src/Realtime.php"><a href="../files/src-realtime.html"><abbr title="src/Realtime.php">Realtime.php</abbr></a></abbr>
         :
-        <span class="phpdocumentor-element-found-in__line">471</span>
+        <span class="phpdocumentor-element-found-in__line">473</span>
     </aside>
         <p class="phpdocumentor-summary">Check if client is connected.</p>
         <code class="phpdocumentor-signature phpdocumentor-code ">
